--- a/src/app/offer-screen/offer-screen.page.html
+++ b/src/app/offer-screen/offer-screen.page.html
@@ -7,24 +7,36 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content fullscreen>
+<ion-content fullscreen color="primary">
   <ion-item>
-  <ion-input placeholder="czego szukasz?" clear-input="true"></ion-input>
-</ion-item>
-  <ion-list id="list">
-    <ion-item *ngFor="let offer of offers">
-    <ion-avatar slot="start">
-      <img src={{offer.avatar}}>
-    </ion-avatar>
-    <ion-label>
-      <h2>{{offer.first_name}}</h2>
-      <p>{{offer.email}}</p>
-      <p>price: {{offer.id}}</p>
-    </ion-label>
+    <ion-input placeholder="czego szukasz?" clear-input="true"></ion-input>
   </ion-item>
-  </ion-list>
 
-  <ion-infinite-scroll threshold="100px" id="infinite-scroll" (ionInfinite)="loadOffers($event)">
+  <div *ngFor="let offer of offers">
+    <ion-card (click)="openOfferDetails(offer);">
+      <img src="{{offer.image}}"/>
+      <ion-card-header>
+        <ion-card-title>{{offer.title}}</ion-card-title>
+        <ion-card-subtitle>{{offer.authorUserName}}</ion-card-subtitle>
+        <ion-card-subtitle>cena: {{offer.price}} zł</ion-card-subtitle>
+      </ion-card-header>
+      <ion-card-content>
+        {{offer.shortDescription}}
+      </ion-card-content>
+    </ion-card>
+  </div>
+
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button>
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
+  <ion-infinite-scroll
+    threshold="100px"
+    id="infinite-scroll"
+    (ionInfinite)="loadOffers($event)"
+  >
     <ion-infinite-scroll-content
       loading-spinner="bubbles"
       loading-text="Loading more data..."
