--- a/src/app/offer-screen/offer-screen.page.html
+++ b/src/app/offer-screen/offer-screen.page.html
@@ -27,7 +27,7 @@
   </div>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button>
+    <ion-fab-button (click)="openOfferCreator();">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
