added dynamic profile routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
             <ion-icon name="people" slot="start"></ion-icon>
             <ion-label>Szukaj użytkowników</ion-label>
           </ion-item>
-          <ion-item routerLink='/user-profile'>
+          <ion-item (click)="openCurrentUserProfile()">
             <ion-icon name="build" slot="start"></ion-icon>
             <ion-label>Profil</ion-label>
           </ion-item>
