--- a/src/app/offer-screen/offer/offer.component.html
+++ b/src/app/offer-screen/offer/offer.component.html
@@ -1,37 +1,42 @@
-<ion-header>
+<ion-header *ngIf="!loading">
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button auto-hide="false" menu="side-menu"></ion-menu-button>
     </ion-buttons>
-    <ion-title>{{offerDetails$.value.title}}</ion-title>
+    <ion-title>{{tempOffer.title}}</ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-content fullscreen color="primary">
-  <img src={{offerDetails$.value.image}}>
+
+<div *ngIf="loading">
+  <h3>Ładowanie...</h3>
+</div>
+
+<ion-content fullscreen color="primary" *ngIf="!loading">
+  <img src={{tempOffer.image}}>
   <ion-item>
     <ion-thumbnail slot="start"><ion-icon size="large" name="person-outline"></ion-icon></ion-thumbnail>
       <ion-label>
         <h3>Właściciel oferty:</h3>
-        <p>{{offerDetails$.value.authorUserName}}</p>
+        <p><a (click)="openOwnerProfile();">{{tempOffer.authorUserName}}</a></p>
       </ion-label>
   </ion-item>
   <ion-item>
     <ion-thumbnail slot="start"><ion-icon size="large" name="wallet-outline"></ion-icon></ion-thumbnail>
       <ion-label>
         <h3>Cena usługi:</h3>
-        <p>{{offerDetails$.value.price}} zł</p>
+        <p>{{tempOffer.price}} zł</p>
       </ion-label>
   </ion-item>
   <ion-item>
     <ion-thumbnail slot="start"><ion-icon size="large" name="albums-outline"></ion-icon></ion-thumbnail>
       <ion-label>
         <h3>Tagi:</h3>
-        <p>{{offerDetails$.value.tags}}</p>
+        <p>{{tempOffer.tags}}</p>
       </ion-label>
   </ion-item>
   <ion-card>
     <ion-card-header>Opis:</ion-card-header>
-    <ion-card-content>{{offerDetails$.value.description}}</ion-card-content>
+    <ion-card-content>{{tempOffer.shortDescription}}</ion-card-content>
   </ion-card>
   
 </ion-content>
