--- a/src/app/offer-screen/offer/offer.component.html
+++ b/src/app/offer-screen/offer/offer.component.html
@@ -1,7 +1,7 @@
 <ion-header *ngIf="!loading">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button auto-hide="false" menu="side-menu"></ion-menu-button>
+      <ion-back-button></ion-back-button>
     </ion-buttons>
     <ion-title>{{tempOffer.title}}</ion-title>
   </ion-toolbar>
