--- a/src/app/user-profile/user-profile.page.html
+++ b/src/app/user-profile/user-profile.page.html
@@ -15,7 +15,7 @@
   <ion-item>
     <ion-avatar>
       <img
-        src="https://ionicframework.com/blog/wp-content/uploads/2016/08/ionic-icon.png"
+        src={{user$.value.profileImage}}
       />
     </ion-avatar>
     <ion-label>{{user$.value.userName}}</ion-label>
