--- a/src/app/user-profile/user-profile.page.html
+++ b/src/app/user-profile/user-profile.page.html
@@ -41,5 +41,13 @@
         >
       </ion-item>
     </div>
+    <ion-item>
+      <ion-button
+      (click)="openUserOffers();"
+      slot="start"
+      size="medium"
+      >Oferty użytkownika</ion-button
+    >
+    </ion-item>
   </ion-list>
 </ion-content>
