added positive negative in comments

--- a/src/app/offer-screen/offer/offer.component.scss
+++ b/src/app/offer-screen/offer/offer.component.scss
@@ -10,3 +10,15 @@ img {
 .deleteButton {
     float: right;
 }
+
+.pos {
+    background-color: #47d147;
+    color: white;
+}
+
+.neg {
+    background-color: #ff1a1a;
+    color: white;
+}
+    
+    
