--- a/src/app/offer-screen/offer/offer.component.html
+++ b/src/app/offer-screen/offer/offer.component.html
@@ -1,9 +1,14 @@
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+/>
+
 <ion-header *ngIf="!loading">
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>{{tempOffer.title}}</ion-title>
+    <ion-title>{{ tempOffer.title }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -12,49 +17,85 @@
 </div>
 
 <ion-content fullscreen color="primary" *ngIf="!loading">
-  <img src={{tempOffer.image}}>
+  <img src="{{ tempOffer.image }}" />
   <ion-item>
-    <ion-thumbnail slot="start"><ion-icon size="large" name="person-outline"></ion-icon></ion-thumbnail>
-      <ion-label>
-        <h3>Właściciel oferty:</h3>
-        <p><a (click)="openOwnerProfile();">{{tempOffer.authorUserName}}</a></p>
-      </ion-label>
+    <ion-thumbnail slot="start"
+      ><ion-icon size="large" name="person-outline"></ion-icon
+    ></ion-thumbnail>
+    <ion-label>
+      <h3>Właściciel oferty:</h3>
+      <p>
+        <a (click)="openOwnerProfile()">{{ tempOffer.authorUserName }}</a>
+      </p>
+    </ion-label>
   </ion-item>
   <ion-item>
-    <ion-thumbnail slot="start"><ion-icon size="large" name="wallet-outline"></ion-icon></ion-thumbnail>
-      <ion-label>
-        <h3>Cena usługi:</h3>
-        <p>{{tempOffer.price}} zł</p>
-      </ion-label>
+    <ion-thumbnail slot="start"
+      ><ion-icon size="large" name="wallet-outline"></ion-icon
+    ></ion-thumbnail>
+    <ion-label>
+      <h3>Cena usługi:</h3>
+      <p>{{ tempOffer.price }} zł</p>
+    </ion-label>
   </ion-item>
   <ion-item>
-    <ion-thumbnail slot="start"><ion-icon size="large" name="albums-outline"></ion-icon></ion-thumbnail>
-      <ion-label>
-        <h3>Tagi:</h3>
-        <p>{{tempOffer.tags}}</p>
-      </ion-label>
+    <ion-thumbnail slot="start"
+      ><ion-icon size="large" name="albums-outline"></ion-icon
+    ></ion-thumbnail>
+    <ion-label>
+      <h3>Tagi:</h3>
+      <p>{{ tempOffer.tags }}</p>
+    </ion-label>
   </ion-item>
   <ion-card>
     <ion-card-header>Opis:</ion-card-header>
-    <ion-card-content>{{tempOffer.shortDescription}}</ion-card-content>
+    <ion-card-content>{{ tempOffer.shortDescription }}</ion-card-content>
   </ion-card>
 
-
-    <ion-card *ngFor="let comment of comments" >
-      <ion-card-header>{{comment.authorUserName}}</ion-card-header>
-      <ion-card-subtitle>{{comment.createdDate | date: 'dd.MM.yyyy'}}</ion-card-subtitle>
-      <ion-card-content>{{comment.text}}</ion-card-content>
+  <div>
+    <ion-card *ngFor="let comment of comments">
+      <ion-card-header
+        [class.pos]="comment.isPositive"
+        [class.neg]="!comment.isPositive"
+        >{{ comment.authorUserName }}</ion-card-header
+      >
+      <ion-card-subtitle>{{
+        comment.createdDate | date: "dd.MM.yyyy"
+      }}</ion-card-subtitle>
+      <ion-card-content>{{ comment.text }}</ion-card-content>
       <div class="deleteButton">
-      <ion-fab-button (click)="deleteComment(comment.id)" size="small" color="danger">Usuń</ion-fab-button>
-    </div>
+        <ion-item>
+          <div *ngIf="owner == comment.authorUserName && comment.isPositive == false">
+            <ion-fab-button
+              (click)="setToPositive(comment.id)"
+              size="small"
+              color="success"
+              ><i class="fa fa-repeat"></i
+            ></ion-fab-button>
+          </div>
+          <div *ngIf="owner == comment.authorUserName">
+            <ion-fab-button
+              (click)="deleteComment(comment.id)"
+              size="small"
+              color="danger"
+              >Usuń</ion-fab-button
+            >
+          </div>
+        </ion-item>
+      </div>
     </ion-card>
-<form #form="ngForm" (ngSubmit)="addComment(form)">
+  </div>
+  <form #form="ngForm" (ngSubmit)="addComment(form)">
     <ion-item>
       <ion-label position="floating">Dodaj komentarz</ion-label>
-      <ion-textarea name="newComment" [(ngModel)]="newComment" type="text" ngModel required></ion-textarea>
+      <ion-textarea
+        name="newComment"
+        [(ngModel)]="newComment"
+        type="text"
+        ngModel
+        required
+      ></ion-textarea>
       <ion-button type="submit">Dodaj</ion-button>
     </ion-item>
   </form>
-
-  
 </ion-content>
