--- a/src/app/message-screen/chat/chat.component.scss
+++ b/src/app/message-screen/chat/chat.component.scss
@@ -1,5 +1,13 @@
-.title {
-    padding-left: 20%;
+.owner {
+    padding-left: 5%;
     background-color: #3880ff;
-    color: red;
+}
+
+.notOwner {
+    padding-left: 5%;
+    background-color: #3dc2ff;
+}
+
+h3 {
+    color: aliceblue;
 }
