added comments to user profile

--- a/src/app/message-screen/message-screen.page.html
+++ b/src/app/message-screen/message-screen.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>message-screen</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button auto-hide="false" menu="side-menu"></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Wiadomości</ion-title>
   </ion-toolbar>
 </ion-header>
 
