--- a/src/app/user-profile/user-profile.page.html
+++ b/src/app/user-profile/user-profile.page.html
@@ -1,3 +1,7 @@
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+/>
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
@@ -50,4 +54,50 @@
     >
     </ion-item>
   </ion-list>
+  <div>
+    <ion-card *ngFor="let comment of comments">
+      <ion-card-header
+        [class.pos]="comment.isPositive"
+        [class.neg]="!comment.isPositive"
+        >{{ comment.authorUserName }}</ion-card-header
+      >
+      <ion-card-subtitle>{{
+        comment.createdDate | date: "dd.MM.yyyy"
+      }}</ion-card-subtitle>
+      <ion-card-content>{{ comment.text }}</ion-card-content>
+      <div class="deleteButton">
+        <ion-item>
+          <div *ngIf="owner == comment.authorUserName && comment.isPositive == false">
+            <ion-fab-button
+              (click)="setToPositive(comment.id)"
+              size="small"
+              color="success"
+              ><i class="fa fa-repeat"></i
+            ></ion-fab-button>
+          </div>
+          <div *ngIf="owner == comment.authorUserName">
+            <ion-fab-button
+              (click)="deleteComment(comment.id)"
+              size="small"
+              color="danger"
+              >Usuń</ion-fab-button
+            >
+          </div>
+        </ion-item>
+      </div>
+    </ion-card>
+  </div>
+  <!-- <form #form="ngForm" (ngSubmit)="addComment(form)">
+    <ion-item>
+      <ion-label position="floating">Dodaj komentarz</ion-label>
+      <ion-textarea
+        name="newComment"
+        [(ngModel)]="newComment"
+        type="text"
+        ngModel
+        required
+      ></ion-textarea>
+      <ion-button type="submit">Dodaj</ion-button>
+    </ion-item>
+  </form> -->
 </ion-content>
