--- a/src/app/user-profile/user-profile.page.scss
+++ b/src/app/user-profile/user-profile.page.scss
@@ -2,3 +2,25 @@ ion-avatar {
     width: 100px;  
     height: 100px;  
 }
+.ion-icon{
+    text-align: center;
+}
+
+img {
+    padding: 3%;
+    border-radius: 25px;
+}
+
+.deleteButton {
+    float: right;
+}
+
+.pos {
+    background-color: #47d147;
+    color: white;
+}
+
+.neg {
+    background-color: #ff1a1a;
+    color: white;
+}
