--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,10 @@
             <ion-icon name="build" slot="start"></ion-icon>
             <ion-label>Profil</ion-label>
           </ion-item>
+          <ion-item (click)="openOrders()">
+            <ion-icon name="cart-outline" slot="start"></ion-icon>
+            <ion-label>Zamówienia</ion-label>
+          </ion-item>
           <ion-item (click)="logOut()">
             <ion-icon name="walk" slot="start"></ion-icon>
             <ion-label>Wyloguj</ion-label>
