--- a/src/app/offer-screen/offer-screen.page.html
+++ b/src/app/offer-screen/offer-screen.page.html
@@ -1,3 +1,8 @@
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+/>
+
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
@@ -11,7 +16,8 @@
   <form #form="ngForm">
   <ion-item (ngSubmit)="getPagedByTags(form)" > 
     <ion-input name="tags" [(ngModel)]="tags" placeholder="tag1,tag2" clear-input="true" ngModel required></ion-input>
-    <ion-fab-button (click)="getPagedByTags(tags)" type="submit" size="small">szukaj</ion-fab-button>
+    <ion-fab-button (click)="getPagedByTags(tags)" type="submit" size="small"><i class="fa fa-search"></i
+      ></ion-fab-button>
   </ion-item>
 </form>
 
