--- a/src/app/offer-screen/offer/offer.component.html
+++ b/src/app/offer-screen/offer/offer.component.html
@@ -54,9 +54,6 @@
       <ion-card-content>{{ tempOffer.shortDescription }}</ion-card-content>
     </ion-card>
 
-
-    <ion-button (click)="initializePayPal()">Zamów usługę</ion-button>
-
     <div>
       <ion-card *ngFor="let comment of comments">
         <ion-card-header
@@ -87,7 +84,8 @@
                 (click)="deleteComment(comment.id)"
                 size="small"
                 color="danger"
-                >Usuń</ion-fab-button
+                ><i class="fa fa-trash"></i
+                  ></ion-fab-button
               >
             </div>
           </ion-item>
