added some fixes

--- a/src/app/message-screen/chat/chat.component.html
+++ b/src/app/message-screen/chat/chat.component.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>Chat</ion-title>
+    <ion-title>Chat z {{addressee}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
