--- a/src/app/offer-creator/offer-creator.page.html
+++ b/src/app/offer-creator/offer-creator.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>offer-creator</ion-title>
+    <ion-title>Kreator oferty</ion-title>
   </ion-toolbar>
 </ion-header>
 
