--- a/src/app/login-screen/login-screen.page.html
+++ b/src/app/login-screen/login-screen.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>login-screen</ion-title>
+    <ion-title>Logowanie</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -10,24 +10,21 @@
       <ion-row color="primary" justify-content-center>
         <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
           <div text-center>
-            <h3>Login</h3>
+            <h3>Zaloguj do dyszkaPl</h3>
           </div>
           <div padding>
             <ion-item>
-              <ion-input name="username" type="text" [(ngModel)]="username" placeholder="Username" ngModel required></ion-input>
+              <ion-input name="username" type="text" [(ngModel)]="username" placeholder="Nazwa użytkownika" ngModel required></ion-input>
             </ion-item>
             <ion-item>
-              <ion-input name="password" type="password" [(ngModel)]="password" placeholder="Password" ngModel required></ion-input>
+              <ion-input name="password" type="password" [(ngModel)]="password" placeholder="Hasło" ngModel required></ion-input>
             </ion-item>
           </div>
           <div padding>
-            <ion-button size="large" type="submit" [disabled]="form.invalid" expand="block">Login</ion-button>
+            <ion-button size="large" type="submit" [disabled]="form.invalid" expand="block">Zaloguj</ion-button>
           </div>
           <div>
             <ion-button size="medium" click expand="block" (click)="toRegisterScreen();">Rejestracja</ion-button>
-          </div>
-          <div>
-            <ion-button size="medium" click expand="block" (click)="toMainMenu();">Main menu short</ion-button>
           </div>
         </ion-col>
       </ion-row>
