--- a/src/app/register-screen/register-screen.page.html
+++ b/src/app/register-screen/register-screen.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>register-screen</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>Rejestracja</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -10,21 +13,21 @@
       <ion-row color="primary" justify-content-center>
         <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
           <div text-center>
-            <h3>Create your account!</h3>
+            <h3>Utwórz konto!</h3>
           </div>
           <div padding>
             <ion-item>
-              <ion-input  name="name" [(ngModel)]="username" id="username" type="text" placeholder="Name" ngModel required></ion-input>
+              <ion-input  name="name" [(ngModel)]="username" id="username" type="text" placeholder="Nazwa użytkownika" ngModel required></ion-input>
             </ion-item>
             <ion-item>
-              <ion-input name="password" id="password" [(ngModel)]="password" type="password" placeholder="Password" ngModel required></ion-input>
+              <ion-input name="password" id="password" [(ngModel)]="password" type="password" placeholder="Hasło" ngModel required></ion-input>
             </ion-item>
             <ion-item>
-              <ion-input name="confirm" id="confirmPassword" [(ngModel)]="confirmPassword" type="password" placeholder="Password again" ngModel required></ion-input>
+              <ion-input name="confirm" id="confirmPassword" [(ngModel)]="confirmPassword" type="password" placeholder="Potwierdź hasło" ngModel required></ion-input>
             </ion-item>
           </div>
           <div padding>
-            <ion-button  size="large" type="submit" [disabled]="form.invalid" expand="block">Register</ion-button>
+            <ion-button  size="large" type="submit" [disabled]="form.invalid" expand="block">Zarejestruj</ion-button>
           </div>
         </ion-col>
       </ion-row>
