--- a/src/app/user-profile/user-profile.page.html
+++ b/src/app/user-profile/user-profile.page.html
@@ -7,7 +7,7 @@
     <ion-buttons slot="start">
       <ion-menu-button auto-hide="false" menu="side-menu"></ion-menu-button>
     </ion-buttons>
-    <ion-title>Twój profil</ion-title>
+    <ion-title>Profil</ion-title>
   </ion-toolbar>
 </ion-header>
 
