added offer validation

--- a/src/app/offer-creator/offer-creator.page.html
+++ b/src/app/offer-creator/offer-creator.page.html
@@ -28,7 +28,7 @@
       </ion-item>
       <ion-item>
         <ion-label>Cena: </ion-label>
-        <ion-input placeholder="cena" formControlName="price" type="number"></ion-input>
+        <ion-input placeholder="conajmniej 10zł" formControlName="price" type="number"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label>Tagi: </ion-label>
