--- a/src/app/orders-screen/orders-screen.page.html
+++ b/src/app/orders-screen/orders-screen.page.html
@@ -56,6 +56,6 @@
 
 <ion-footer>
   <ion-toolbar>
-    <ion-button expand="block" (click)="presentActionSheet()">Opcje wyświetlania</ion-button>
+    <ion-button expand="block" (click)="presentActionSheet()">Wyświetlane zamówienia</ion-button>
   </ion-toolbar>
 </ion-footer>
