--- a/src/app/register-screen/register-screen.page.html
+++ b/src/app/register-screen/register-screen.page.html
@@ -7,8 +7,8 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content  color="primary">
-  <form  #form="ngForm" (ngSubmit)="register(form)">
+<ion-content color="primary">
+  <form #form="ngForm" (ngSubmit)="register(form)">
     <ion-grid>
       <ion-row color="primary" justify-content-center>
         <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
@@ -17,17 +17,47 @@
           </div>
           <div padding>
             <ion-item>
-              <ion-input  name="name" [(ngModel)]="username" id="username" type="text" placeholder="Nazwa użytkownika" ngModel required></ion-input>
+              <ion-input
+                name="name"
+                [(ngModel)]="username"
+                id="username"
+                type="text"
+                placeholder="Nazwa użytkownika"
+                ngModel
+                required
+              ></ion-input>
             </ion-item>
             <ion-item>
-              <ion-input name="password" id="password" [(ngModel)]="password" type="password" placeholder="Hasło" ngModel required></ion-input>
+              <ion-input
+                name="password"
+                id="password"
+                [(ngModel)]="password"
+                type="password"
+                placeholder="Hasło"
+                ngModel
+                required
+              ></ion-input>
             </ion-item>
             <ion-item>
-              <ion-input name="confirm" id="confirmPassword" [(ngModel)]="confirmPassword" type="password" placeholder="Potwierdź hasło" ngModel required></ion-input>
+              <ion-input
+                name="confirm"
+                id="confirmPassword"
+                [(ngModel)]="confirmPassword"
+                type="password"
+                placeholder="Potwierdź hasło"
+                ngModel
+                required
+              ></ion-input>
             </ion-item>
           </div>
           <div padding>
-            <ion-button  size="large" type="submit" [disabled]="form.invalid" expand="block">Zarejestruj</ion-button>
+            <ion-button
+              size="large"
+              type="submit"
+              [disabled]="form.invalid"
+              expand="block"
+              >Zarejestruj</ion-button
+            >
           </div>
         </ion-col>
       </ion-row>
