--- a/src/app/offer-screen/offer/offer.component.html
+++ b/src/app/offer-screen/offer/offer.component.html
@@ -51,7 +51,7 @@
     </ion-item>
     <ion-card>
       <ion-card-header>Opis:</ion-card-header>
-      <ion-card-content>{{ tempOffer.shortDescription }}</ion-card-content>
+      <ion-card-content>{{ tempOffer.description }}</ion-card-content>
     </ion-card>
 
     <div>
